WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
229294
[LFC][Integration] Start using InlineInvalidation to clean runs and lines
https://bugs.webkit.org/show_bug.cgi?id=229294
Summary
[LFC][Integration] Start using InlineInvalidation to clean runs and lines
alan
Reported
2021-08-19 09:55:51 PDT
we are still not doing any incremental invalidation yet.
Attachments
Patch
(7.01 KB, patch)
2021-08-19 09:57 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(13.37 KB, patch)
2021-09-14 16:23 PDT
,
alan
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(14.07 KB, patch)
2021-09-14 16:41 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(14.18 KB, patch)
2021-09-16 18:21 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(13.82 KB, patch)
2021-09-17 07:32 PDT
,
alan
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2021-08-19 09:57:20 PDT
Created
attachment 435876
[details]
Patch
Radar WebKit Bug Importer
Comment 2
2021-08-26 09:56:42 PDT
<
rdar://problem/82395169
>
alan
Comment 3
2021-09-14 16:23:55 PDT
Created
attachment 438186
[details]
Patch
alan
Comment 4
2021-09-14 16:41:41 PDT
Created
attachment 438190
[details]
Patch
alan
Comment 5
2021-09-16 18:21:37 PDT
Created
attachment 438426
[details]
Patch
Antti Koivisto
Comment 6
2021-09-17 06:47:39 PDT
Comment on
attachment 438426
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=438426&action=review
> Source/WebCore/rendering/RenderBlockFlow.cpp:2149 > + ASSERT(oldStyle);
maybe these asserts are not needed?
alan
Comment 7
2021-09-17 07:32:59 PDT
Created
attachment 438474
[details]
Patch
EWS
Comment 8
2021-09-17 08:03:19 PDT
Committed
r282662
(
241803@main
): <
https://commits.webkit.org/241803@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 438474
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug